First version of new editor footer.

--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -1,18 +1,18 @@
-<div class="later">
+<div class="table">
 
-  <div class="later-row">
-    <a href class="later-row--left" ng-click="setDateFirstDayOfNextMonth()">next month</a>
-    <a href class="later-row--right" ng-click="setDateToSecondMonday()">two weeks</a>
+  <div class="table-row">
+    <a href class="table-cell" ng-click="setDateFirstDayOfNextMonth()">next month</a>
+    <a href class="table-cell" ng-click="setDateToSecondMonday()">two weeks</a>
   </div>
 
-  <div class="later-row">
-    <a href class="later-row--left" ng-click="setDateFirstDayOfNextWeek()">next week</a>
-    <a href class="later-row--right" ng-click="setDateNextWeekend()">next weekend</a>
+  <div class="table-row">
+    <a href class="table-cell" ng-click="setDateFirstDayOfNextWeek()">next week</a>
+    <a href class="table-cell" ng-click="setDateNextWeekend()">next weekend</a>
   </div>
 
-  <div class="later-row">
-    <a href class="later-row--left" ng-click="setDateDayAfterTomorrow()">day after tomorrow</a>
-    <a href class="later-row--right" ng-click="setDateTomorrow()">tomorrow</a>
+  <div class="table-row">
+    <a href class="table-cell" ng-click="setDateDayAfterTomorrow()">day after tomorrow</a>
+    <a href class="table-cell" ng-click="setDateTomorrow()">tomorrow</a>
   </div>
 
 </div>
