--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -21,11 +21,19 @@
     </div>
   </header>
 
-  <div class="container-fluid--inner" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}">
-    <div class="container-content" drawer-override-aisle="right">
-      <textarea class="row-form" ng-model="tag.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024"></textarea>
+  <div class="container-fluid--inner">
+    <div class="container-content" drawer-override-aisle="right" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}">
+
+      <div class="row-form">
+        <input type="text" ng-model="tag.link" placeholder="enter url&#8230;">
+      </div>
+
+      <div class="row-form">
+        <textarea ng-model="tag.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024"></textarea>
+      </div>
+
     </div>
-    <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
+    <footer class="container-content--after editor-footer">
     </footer>
   </div>
 </div>
