--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -25,10 +25,10 @@
     </div>
   </header>
 
-  <div class="swiper-container container-fluid--inner" ng-style="{'padding-bottom': mode === 'fullScreen' ? 0 : EDITOR_FOOTER_HEIGHT}" swiper-container="noteEditor" swiper-type="main" expected-slides="2" swiper-container-slide-changed="editorSwiperSlideChanged()">
+  <div class="swiper-container container-fluid--inner" swiper-container="noteEditor" swiper-type="main" expected-slides="2" swiper-container-slide-changed="editorSwiperSlideChanged()">
     <div class="swiper-wrapper">
       <div class="swiper-slide" swiper-slide="noteEditor/basic" slide-index="0">
-        <div class="container-content" drawer-override-aisle="right">
+        <div ng-style="{'padding-bottom': mode === 'fullScreen' ? 0 : EDITOR_FOOTER_HEIGHT}" class="container-content" drawer-override-aisle="right">
 
           <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
             <div list-picker="lists" list-picker-archived-lists="archivedLists" list-picker-save="closeListPickerAndSetListToItem(note, list)" list-picker-clear="closeListPickerAndClearListFromItem(note, list)" list-picker-get-selected="getListFromUUID(note.transientProperties.list)"></div>
@@ -45,7 +45,7 @@
           </div>
         </div>
 
-        <footer ng-hide="mode === 'fullScreen'" class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
+        <footer ng-hide="mode === 'fullScreen'" class="container-content--after editor-footer">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!note.transientProperties.favorited && 'inactive'"></span>
@@ -57,14 +57,32 @@
         </footer>
       </div>
 
-      <div class="swiper-slide" swiper-slide="noteEditor/advanced" slide-index="1">
-        <div class="container-content">
-          <select ng-show="keywords.length" ng-model="note.transientProperties.keywords" ng-options="keyword.uuid as keyword.title for keyword in keywords">
+      <div class="swiper-slide" swiper-slide="noteEditor/advanced" slide-index="1" ng-init="advancedSlideInfo = {}">
+        <div ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}" class="container-content">
+
+          <!-- TODO! -->
+          <!-- <select ng-show="keywords.length" ng-model="note.transientProperties.keywords" ng-options="keyword.uuid as keyword.title for keyword in keywords">
             <option value="">select keywords&#8230;</option>
-          </select>
-          <input type="text" ng-model="note.link" placeholder="url&#8230;">
+          </select> -->
+
+          <div class="row-form">
+            <input type="text" ng-model="note.link" placeholder="enter url&#8230;">
+          </div>
+
         </div>
-        <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
+        <footer class="container-content--after editor-footer" editor-footer="advancedSlideInfo">
+
+          <div class="table">
+            <div class="table-row">
+              <a href class="table-cell" ng-click="convertToTask()">
+                <span class="text-convert">task</span>
+              </a>
+              <a href class="table-cell" ng-click="convertToList()">
+                <span class="text-convert">list</span>
+              </a>
+            </div>
+          </div>
+
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-click="swipeToBasic()" class="group-symmetrical--left link-navigation">
               <span class="text-navigation-back">basic</span>
