Repeating picker. Replaced horizontal ellipsis (...) in JavaScript with unicode characted (2026).

--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -18,7 +18,7 @@
     </a>
   </div>
 
-  <div class="row-form">
+  <div ng-if="newList" class="row-form">
     <textarea autocapitalize="none" autocorrect="off" ng-model="newList.title" msd-elastic
     ng-click="watchForTitleChange()" ng-keydown="textareaKeyDown($event)" placeholder="{{placeholder}}"
     maxlength="128"></textarea>
