--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -36,14 +36,14 @@
           </div>
 
           <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
-            <div list-picker="lists" list-picker-archived-lists="archivedLists" list-picker-save="closeListPickerAndSetListToItem(task, list)" list-picker-clear="closeListPickerAndClearListFromItem(task, list)" list-picker-get-selected="getListFromUUID(task.transientProperties.list)"></div>
+            <div list-picker="lists" list-picker-new-item="{}" list-picker-archived-lists="archivedLists" list-picker-save="closeListPickerAndSetListToItem(task, list)" list-picker-clear="closeListPickerAndClearListFromItem(task, list)" list-picker-get-selected="getListFromUUID(task.transientProperties.list)"></div>
           </div>
 
           <div ng-if="!calendarOpen && !listPickerOpen">
             <div class="row-form animate-fade-in" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
 
             <div class="row-form" ng-click="openListPicker()">
-              <span class="text-link" ng-bind="task.transientProperties.list ? getListTitleFromUUID(task.transientProperties.list) : 'select list...'"></span>
+              <span class="text-link" ng-bind="task.transientProperties.list ? getListTitleFromUUID(task.transientProperties.list) : 'select list\u2026'"></span>
             </div>
 
             <div class="row-form">
@@ -73,21 +73,28 @@
       <div class="swiper-slide" swiper-slide="taskEditor/advanced" slide-index="1" ng-init="advancedSlideInfo = {}">
         <div class="container-content" ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}">
 
+          <!-- CONTEXT PICKER -->
           <div ng-if="contextPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeContextPicker()" data-snap-ignore="true">
             <div list-picker="contexts" list-picker-new-item="{tagType: 'context'}" list-picker-save="closeContextPickerAndSetContextToItem(task, list)" list-picker-clear="closeContextPickerAndClearContextFromItem(task, list)" list-picker-get-selected="getContextFromUUID(task.transientProperties.context)" list-picker-type="context" list-picker-prefix="@"></div>
           </div>
 
-          <div ng-if="!contextPickerOpen">
+          <!-- REPEATING PICKER -->
+          <div ng-if="repeatingPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeRepeatingPicker()" data-snap-ignore="true">
+            <div list-picker="repeatTypes" list-picker-save="closeRepeatingPickerAndSetRepeatTypeToTask(task, list)" list-picker-clear="closeRepeatingPickerAndClearRepeatTypeFromtask(task, list)" list-picker-get-selected="task.repeating ? {title: task.repeating} : undefined" list-picker-type="repeating"></div>
+          </div>
+
+          <div ng-if="!contextPickerOpen && !repeatingPickerOpen">
+
             <div class="row-form" ng-click="openContextPicker()">
               <a href ng-click="openContextPicker()">
-                <span class="text-link" ng-bind="task.transientProperties.context ? '@' + getContextTitleFromUUID(task.transientProperties.context) : 'select context...'"></span>
+                <span class="text-link" ng-bind="task.transientProperties.context ? '@' + getContextTitleFromUUID(task.transientProperties.context) : 'select context\u2026'"></span>
               </a>
             </div>
 
             <div class="row-form">
-              <select ng-if="task.transientProperties.date" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes">
-                <option value="">select repeating&#8230;</option>
-              </select>
+              <a href ng-if="task.transientProperties.date" ng-click="openRepeatingPicker()">
+                <span class="text-link" ng-bind="task.repeating ? task.repeating : 'select repeating\u2026'"></span>
+              </a>
             </div>
 
             <div class="row-form">
