--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -36,7 +36,7 @@
 
           <div ng-if="!listPickerOpen">
             <div ng-hide="mode === 'fullScreen'" class="row-form" ng-click="openListPicker()">
-              <span class="text-link" ng-bind="note.transientProperties.list ? getListTitleFromUUID(note.transientProperties.list) : 'select list...'"></span>
+              <span class="text-link" ng-bind="note.transientProperties.list ? getListTitleFromUUID(note.transientProperties.list) : 'select list\u2026'"></span>
             </div>
 
             <textarea class="row" ng-model="note.content" msd-elastic placeholder="enter content&#8230;"
