Added undebugged conversion between task <-> list <-> note, starting from existing item. Fixes to editor footer.

--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -22,7 +22,7 @@
   </header>
 
   <div class="container-fluid--inner">
-    <div class="container-content" drawer-override-aisle="right" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}">
+    <div class="container-content">
 
       <div class="row-form">
         <input type="text" ng-model="tag.link" placeholder="enter url&#8230;">
