--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -74,10 +74,10 @@
 
           <div class="table">
             <div class="table-row">
-              <a href class="table-cell" ng-click="convertToTask()">
+              <a href class="table-cell" ng-click="convertToTask(note)">
                 <span class="text-convert">task</span>
               </a>
-              <a href class="table-cell" ng-click="convertToList()">
+              <a href class="table-cell" ng-click="convertToList(note)">
                 <span class="text-convert">list</span>
               </a>
             </div>
