--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <div ng-if="syncState !== 'active'" class="container-fluid--inner" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}">
+  <div ng-if="syncState !== 'active'" class="container-fluid--inner">
     <div class="container-content" drawer-override-aisle="right">
       <div ng-repeat="searchResult in searchItems | filter: searchItemFields" class="group-mixed">
         <div class="group-mixed--middle">
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
+    <footer class="container-content--after editor-footer">
       <div class="group-symmetrical">
         <a href class="group-symmetrical--left" ng-click="convertToTask()">
           <span class="text-convert">task</span>
