--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -107,10 +107,10 @@
 
           <div class="table">
             <div class="table-row">
-              <a href class="table-cell" ng-click="convertToNote()">
+              <a href class="table-cell" ng-click="convertToNote(task)">
                 <span class="text-convert">note</span>
               </a>
-              <a href class="table-cell" ng-click="convertToList()">
+              <a href class="table-cell" ng-click="convertToList(task)">
                 <span class="text-convert">list</span>
               </a>
             </div>
