--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
-  <section class="container-content" list="allActiveTasks" list-order="top" list-recent swiper-prevent>
-    <div ng-if="false">
+  <section class="container-content" list="allActiveTasks" list-order="top" list-recent ng-init="setListOnboarding('tasks', listOnboarding)" swiper-prevent>
+    <div ng-show="isOnboarded('tasks') || isListOnboardingLockedOrReleased('tasks')">
       <div class="group-mixed heading">
         <div class="group-mixed--middle">
           <h2 class="group-heading justified">recent</h2>
@@ -16,13 +16,20 @@
       <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
     </div>
 
-    <div ng-if="true">
-      <h2 class="group-heading instruction row">what do you want to <span class="highlighted">get done?</span></h2>
-      <div class="textgroup-ingress row">add a task by clicking the plus sign below<div/>
+    <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', undefined)" class="group-instruction">
+      <h2 class="group-heading instruction row">what do you want to
+        <span class="highlighted">get done?</span>
+      </h2>
+      <div class="textgroup-ingress row">add a task by clicking the plus sign below</div>
     </div>
-
-  </section>
-  <section class="container-content" list="allActiveTasks" list-order="top" list-recent swiper-prevent>
+    <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', 'off')" class="group-instruction">
+      <h2 class="group-heading instruction row">first
+        <span class="highlighted">task</span> created!
+      </h2>
+      <div class="textgroup-ingress row">you can now go to <span class="highlighted">notes</span> by clicking
+      the <span class="highlighted">menu icon</span> in the top left corner</div>
+      <div class="text-normal row">&#8230;or add more tasks by hitting the plus sign again</div>
+    </div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
 </div>
