--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -20,14 +20,14 @@
       <h2 class="group-heading instruction row">what do you want to
         <span class="highlighted">get done?</span>
       </h2>
-      <div class="textgroup-ingress row">add a task by clicking the plus sign below</div>
+      <div class="textgroup-ingress row">add a <span class="text-highlighted">task</span> by clicking the plus sign below</div>
     </div>
     <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', 'off')" class="group-instruction">
       <h2 class="group-heading instruction row">first
         <span class="highlighted">task</span> created!
       </h2>
       <div class="textgroup-ingress row">you can now go to <span class="highlighted">notes</span> by clicking
-      the <span class="highlighted">menu icon</span> in the top left corner</div>
+      the <span class="highlighted">menu icon</span> in the top-left corner</div>
       <div class="text-normal row">&#8230;or add more tasks by hitting the plus sign again</div>
     </div>
   </section>
