Register drawer aisle override element in tag editor to make swipe to save work.

--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -22,7 +22,7 @@
   </header>
 
   <div class="container-fluid--inner">
-    <div class="container-content">
+    <div class="container-content" drawer-override-aisle="right">
 
       <div class="row-form">
         <input type="text" ng-model="tag.link" placeholder="enter url&#8230;">
