Settings for disable vibration and hide footer

--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -29,7 +29,7 @@
     </div>
     <div class="group-mixed details height-large">
       <div class="group-mixed--left">
-        <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="signupFormAgree" />
+        <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="'signupFormAgree'" />
       </div>
       <div class="group-mixed--middle">
         <span class="text-details">i have read and agree to the</span>
@@ -87,7 +87,7 @@
     </div>
     <div ng-if="!rememberByDefault()" class="group-mixed details height-large">
       <div class="group-mixed--left">
-        <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
+        <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="'loginFormRemember'" />
       </div>
       <span class="group-mixed--middle text-details">remember</span>
     </div>
