--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -22,7 +22,7 @@
         </a>
       </div>
     </div>
-    <!--div class="group-mixed">
+    <div class="group-mixed">
       <a href class="group-mixed--middle" swiper-click="swipeToDetails('settings')">
         <span class="text-link">settings</span>
       </a>
@@ -31,7 +31,7 @@
           <span class="text-navigation-forward large"></span>
         </a>
       </div>
-    </div-->
+    </div>
     <div class="group-mixed">
       <a href class="group-mixed--middle" swiper-click="swipeToDetails('about')">
         <span class="text-link">about</span>
