--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -32,7 +32,7 @@
             <a href ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
             </a>
-            <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
+            <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
           </nav>
@@ -61,7 +61,7 @@
           </div>
 
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-click="swipeToBasic()" class="group-symmetrical--left link-navigation">
+            <a href ng-click="swipeToBasic()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--left link-navigation">
               <span class="text-navigation-back">basic</span>
             </a>
             <a href ng-click="archiveListInEdit(list)"
