--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -61,7 +61,7 @@
                 <span class="text-calendar"></span>
               </a>
             </div>
-            <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
+            <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
           </nav>
@@ -117,7 +117,7 @@
           </div>
 
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-click="swipeToBasic()" class="group-symmetrical--left link-navigation">
+            <a href ng-hide="isFooterNavigationHidden()" ng-click="swipeToBasic()" class="group-symmetrical--left link-navigation">
               <span class="text-navigation-back">basic</span>
             </a>
           </nav>
